--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repo
+    - name: Checkout
       uses: actions/checkout@v2
       with:
         submodules: 'recursive'
@@ -18,3 +18,9 @@ jobs:
         esp_idf_version: v5.3
         target: esp32
         path: '/'
+    - name: Archive artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: dist-without-markdown
+        path: |
+          build/*.bin
