fix: testing cache files with future dates

--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -19,6 +19,8 @@ jobs:
         path: |
           build/esp-idf/*
         key: espidf-5.3-last-buildfiles
+    - name: Update cached files timestamp to future
+        run: touch -d '+2 hour' build/esp-idf/*
     - name: Build with esp-idf for target esp32
       uses: espressif/esp-idf-ci-action@v1.1.0
       with:
