fix: trying another strategy

--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -19,14 +19,15 @@ jobs:
         path: |
           build/esp-idf/*
         key: espidf-5.3-last-buildfiles
+    - name: Update cached files timestamp to future
+      run: |
+        find ./build/esp-idf/ -type f -name "*" -exec touch -d '+2 hour' {} +
     - name: Build with esp-idf for target esp32
       uses: espressif/esp-idf-ci-action@v1.1.0
       with:
         esp_idf_version: v5.3
         target: esp32
         path: '/'
-        command: |
-          find ./build/esp-idf/ -type f -name "*" -exec touch {} + && idf.py build
     - name: Archive artifacts
       uses: actions/upload-artifact@v4
       with:
