fix: trying another strategy

--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -21,7 +21,7 @@ jobs:
         key: espidf-5.3-last-buildfiles
     - name: Update cached files timestamp to future
       run: |
-        find ./build/esp-idf/ -type f -name "*" -exec touch -d '+2 hour' {} +
+        find ./build/esp-idf/ -type f -name "*" -exec touch -d '+2 minute' {} +
     - name: Build with esp-idf for target esp32
       uses: espressif/esp-idf-ci-action@v1.1.0
       with:
