--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -22,13 +22,16 @@ jobs:
     - name: Update cached files timestamp to future
       run: |
         find ./build/esp-idf/ -type f -name "*" -exec touch -d '+1 hour' {} +
-        date --set='+2 hour'
+    - name: Install faketime
+      run: sudo apt-get install -y faketime
     - name: Build with esp-idf for target esp32
       uses: espressif/esp-idf-ci-action@v1.1.0
       with:
         esp_idf_version: v5.3
         target: esp32
         path: '/'
+        command: | 
+          faketime -f '+2h' idf.py build
     - name: Archive artifacts
       uses: actions/upload-artifact@v4
       with:
