--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -25,6 +25,8 @@ jobs:
         esp_idf_version: v5.3
         target: esp32
         path: '/'
+        command: |
+          find /opt/esp/idf/ -type f -name "*" -exec touch -d '-2 hour' {} + && idf.py build
     - name: Archive artifacts
       uses: actions/upload-artifact@v4
       with:
