--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -19,6 +19,9 @@ jobs:
         path: |
           build/esp-idf/*
         key: espidf-5.3-last-buildfiles
+    - name: Update cached files timestamp to future
+      run: |
+        find ./build/esp-idf/ -type f -name "*" -exec touch {} +        
     - name: Build with esp-idf for target esp32
       uses: espressif/esp-idf-ci-action@v1.1.0
       with:
@@ -26,7 +29,7 @@ jobs:
         target: esp32
         path: '/'
         command: |
-          find /opt/esp/idf/ -type f -name "*" -exec touch -d '-2 hour' {} + && idf.py build
+          find /opt/esp/idf/ -type f -name "*" -exec "touch -d '-2 hour' {} +" && idf.py build
     - name: Archive artifacts
       uses: actions/upload-artifact@v4
       with:
