--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -29,7 +29,7 @@ jobs:
         target: esp32
         path: '/'
         command: |
-          find /opt/esp/idf/ -type f -name "*" -exec "touch -d '-2 hour' {} +" && idf.py build
+          find /opt/esp/idf/ -type f -name "*" -exec touch -d '-2 hour' {} + && idf.py build
     - name: Archive artifacts
       uses: actions/upload-artifact@v4
       with:
